# BrushRoyale

./: .gitignore  CMakeLists.txt
src/client/: main.cpp  main2.cpp
src/common/: protocol.hpp
src/server/: main.cpp
